mate-panel/panel-util.h
@@ -3,6 +3,7 @@
 
 #include <gio/gio.h>
 #include <gtk/gtk.h>
+#include <X11/Xlib.h>
 
 #ifdef __cplusplus
 extern "C" {
@@ -66,6 +67,10 @@ void panel_util_set_tooltip_text (GtkWidget  *widget,
 
 GFile *panel_util_get_file_optional_homedir (const char *location);
 
+Window panel_util_get_current_active_window (GtkWidget *toplevel);
+
+void   panel_util_set_current_active_window (GtkWidget *toplevel,
+					     Window     window);
 #ifdef __cplusplus
 }
 #endif
